<resources>
	<string name="app_name" translatable="false">Eclipse</string>

	<!-- General Messages -->
	<string name="message_no_connection">No connection</string>

	<!-- Servers Fragment -->
	<string name="title_servers">Servers</string>
	<string name="button_server_manage">Manage</string>
	<string name="button_server_invite">Invite</string>
	<string name="message_member_count">Members: %1$d</string>
	<string name="message_server_list_is_empty">Server list is empty!</string>

	<!-- Docs Fragment -->
	<string name="title_docs">Documentation</string>

	<!-- Server Activity -->
	<string name="button_save">Save</string>
	<string name="message_saved">Saved</string>
	<string name="title_auto_greetings">Automatic greetings</string>

	<!-- Sign In Activity -->
	<string name="button_sign_in">Sign In</string>

	<!-- Main Dialog -->
	<string name="user_discriminator" translatable="false">#%1$s</string>
	<string name="button_sign_out">Sign out</string>

	<!-- Sign Out Dialog -->
	<string name="button_ok">OK</string>
	<string name="button_cancel">Cancel</string>
	<string name="message_logout">Do you want to sign out of your account?</string>

	<!-- Preference Category Theme -->
	<string name="theme">Theme</string>
	<string name="theme_light">Light</string>
	<string name="theme_dark">Dark</string>
	<string name="theme_system_default">System default</string>

	<!-- Preference Category Language -->
	<string name="language">Language</string>
	<string name="lang_en">English</string>
	<string name="lang_ru">Russian</string>

	<!-- Preference Category Data collection -->
	<string name="analytics">Analytics</string>
	<string name="crash_reports">Crash reports</string>

	<!-- Preference -->
	<string name="title_settings">Settings</string>
	<string name="preference_category_display">Display</string>
	<string name="preference_category_data_collection">Data collection</string>

	<!-- Tabs -->
	<string name="tab_general">General</string>
	<string name="tab_private_rooms">Private rooms</string>
	<string name="tab_audit">Audit</string>
	<string name="tab_leaders">Leaders</string>
	<string name="tab_auto_moderation">Auto moderation</string>
	<string name="tab_custom_commands">Custom commands</string>

	<!-- About Activity -->
	<string name="title_about">About</string>
	<string name="about_title" translatable="false"><b>Eclipse</b> Dashboard</string>
	<string name="developed_by">Developed by Night Devs</string>
	<string name="version">Version: %1$s</string>
	<string name="donationAlerts" translatable="false">DonationAlerts</string>
	<string name="github" translatable="false">GitHub</string>
	<string name="discord" translatable="false">Discord</string>
	<string name="oss_licenses">Open source licenses</string>

</resources>
