<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

	<PreferenceCategory
		app:title="@string/preference_category_display"
		app:iconSpaceReserved="false">

		<ListPreference
			app:key="theme"
			app:iconSpaceReserved="false"
			app:title="@string/theme"
			app:entries="@array/theme_names"
			app:entryValues="@array/theme_values"
			app:dialogTitle="@string/theme" />

		<ListPreference
			app:key="lang"
			app:iconSpaceReserved="false"
			app:title="@string/language"
			app:entries="@array/lang_names"
			app:entryValues="@array/lang_values"
			app:dialogTitle="@string/language" />

	</PreferenceCategory>

	<PreferenceCategory
		app:title="@string/preference_category_data_collection"
		app:iconSpaceReserved="false">

		<SwitchPreference
			app:key="analytics"
			app:iconSpaceReserved="false"
			app:title="@string/analytics" />

		<SwitchPreference
			app:key="crashlytics"
			app:iconSpaceReserved="false"
			app:title="@string/crash_reports" />

	</PreferenceCategory>

</PreferenceScreen>
