<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:gravity="center"
	android:orientation="vertical"
	tools:context=".ui.AboutActivity">

	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="56dp"
		android:gravity="center"
		android:id="@+id/linearLayout"
		tools:ignore="UseCompoundDrawables">

		<ImageView
			android:src="@drawable/ic_eclipse"
			android:layout_width="58dp"
			android:layout_height="58dp"
			android:contentDescription="@string/app_name"
			/>

		<TextView
			android:text="@string/app_dashboard"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textAppearance="?attr/textAppearanceHeadlineMedium" />

	</LinearLayout>

	<TextView
		android:id="@+id/developedBy"
		android:text="@string/developed_by"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="16dp"
		android:textAlignment="center"
		android:textAppearance="?attr/textAppearanceTitleMedium" />

	<TextView
		android:id="@+id/version"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="16dp"
		android:textAlignment="center"
		android:textAppearance="?attr/textAppearanceTitleMedium" />

	<View
		android:layout_width="0dp"
		android:layout_height="0dp"
		android:layout_weight="1" />

	<LinearLayout
		android:orientation="vertical"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:showDividers="beginning|middle|end"
		android:divider="?android:dividerHorizontal">

		<Button
			android:id="@+id/button_discord"
			android:text="@string/discord"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			style="@style/Theme.Eclipse.Button.Block" />

		<Button
			android:id="@+id/button_donation_alerts"
			android:text="@string/donationAlerts"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			style="@style/Theme.Eclipse.Button.Block" />

		<Button
			android:id="@+id/button_github"
			android:text="@string/github"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			style="@style/Theme.Eclipse.Button.Block" />

		<Button
			android:id="@+id/button_oss_licenses"
			android:text="@string/oss_licenses"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			style="@style/Theme.Eclipse.Button.Block" />

	</LinearLayout>

</LinearLayout>
