<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:gravity="center"
	tools:context=".ui.home.AboutFragment">

	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="56dp"
		android:gravity="center"
		android:id="@+id/linearLayout"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		tools:ignore="UseCompoundDrawables">

		<ImageView
			android:src="@drawable/ic_eclipse"
			android:layout_width="58dp"
			android:layout_height="58dp"
			android:contentDescription="@string/app_name"
		/>

		<TextView
			android:text="@string/app_full_name"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textAppearance="?attr/textAppearanceHeadlineMedium"
		/>

	</LinearLayout>

	<TextView
		android:text="@string/developed_by"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="16dp"
		android:textAlignment="center"
		android:textAppearance="?attr/textAppearanceTitleMedium"
		app:layout_constraintTop_toBottomOf="@+id/linearLayout"
		app:layout_constraintStart_toStartOf="parent"
	/>

	<LinearLayout
		android:orientation="vertical"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:showDividers="beginning|middle|end"
		android:divider="?android:dividerHorizontal"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintBottom_toBottomOf="parent">

		<Button
			android:id="@+id/button_github"
			android:text="@string/github"
			android:layout_width="match_parent"
			android:layout_height="58dp"
			style="@style/Theme.Eclipse.Button.Block"
		/>

	</LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
