<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@drawable/dialog_fragment_inset">

	<com.google.android.material.card.MaterialCardView
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		app:cardCornerRadius="14dp"
		style="?attr/materialCardViewElevatedStyle">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">

			<Button
				android:id="@+id/button_close"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:contentDescription="@string/app_name"
				app:icon="@drawable/ic_close_black_24dp"
				style="@style/Widget.Material3.Button.IconButton" />

			<ImageView
				android:id="@+id/user_avatar"
				android:visibility="gone"
				android:layout_width="match_parent"
				android:layout_height="194dp"
				android:contentDescription="@string/app_name"
				android:scaleType="centerCrop" />

			<LinearLayout
				android:layout_height="wrap_content"
				android:layout_width="match_parent"
				android:gravity="center_vertical"
				android:orientation="horizontal">

				<LinearLayout
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:orientation="vertical"
					android:padding="16dp">

					<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:orientation="horizontal">

						<TextView
							android:id="@+id/user_nickname"
							android:gravity="center_vertical"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:textAppearance="?attr/textAppearanceTitleLarge" />

						<TextView
							android:id="@+id/user_discriminator"
							android:gravity="center_vertical"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:textAppearance="?attr/textAppearanceTitleLarge"
							android:textColor="@color/text_muted" />

					</LinearLayout>

					<TextView
						android:gravity="center_vertical"
						android:id="@+id/user_id"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:textAppearance="?attr/textAppearanceBodyMedium"
						android:textColor="?android:attr/textColorSecondary" />

				</LinearLayout>

				<View
					android:layout_height="0dp"
					android:layout_width="0dp"
					android:layout_weight="1" />

				<Button
					android:id="@+id/button_sign_out"
					android:text="@string/button_sign_out"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_margin="8dp"
					style="@style/Theme.Eclipse.TextButton" />

			</LinearLayout>

			<com.google.android.material.divider.MaterialDivider
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				app:dividerColor="@color/divider"/>

			<Button
				android:text="@string/title_settings"
				android:id="@+id/button_settings"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				style="@style/Theme.Eclipse.Button.Block" />

			<Button
				android:text="@string/title_about"
				android:id="@+id/button_about"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				style="@style/Theme.Eclipse.Button.Block" />

		</LinearLayout>

	</com.google.android.material.card.MaterialCardView>

</androidx.core.widget.NestedScrollView>
